objects/PMC_AccountSalesArea__c.object
<CustomObject>
    <description>Customer Sales Area Information</description>
    <fields>
        <fullName>PMC_APARToleranceGroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tolerance Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_AccountAssignmentGroup__c</fullName>
        <label>Account Assignment Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Z1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CSA_Auto_Number__c</fullName>
        <label>CSA Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PMC_CashPlanningGroup__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Planning Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CustomerPricingProcedure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Pricing Procedure</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CustomerTaxCategory__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Tax Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CustomerTaxClassification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Tax Classification</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DG_Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Sales Areas</relationshipLabel>
        <relationshipName>Account_Sales_Areas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMC_DistributionChannel__c</fullName>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_DistributionChannel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_InvoiceListSchedule__c</fullName>
        <label>Invoice List Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_LayoutSortingRule__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sort Key</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_OrderCombination__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Order Combination Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_OrderProbability__c</fullName>
        <label>Order Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_OverdelivTolrtdLmtRatioInPct__c</fullName>
        <label>Overdelivery Tolerance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PMC_ReconciliationAccount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reconciliation Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_RecordPaymentHistoryIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Payment History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_ShippingCondition__c</fullName>
        <label>Shipping Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Z0</fullName>
                    <label>No Transport Req</label>
                </value>
                <value>
                    <fullName>Z1</fullName>
                    <label>Rail</label>
                </value>
                <value>
                    <fullName>Z2</fullName>
                    <label>Truck</label>
                </value>
                <value>
                    <fullName>Z3</fullName>
                    <label>Vessel</label>
                </value>
                <value>
                    <fullName>Z4</fullName>
                    <label>Barge</label>
                </value>
                <value>
                    <fullName>Z6</fullName>
                    <label>Road / Rail Auto Sch</label>
                </value>
                <value>
                    <fullName>Z7</fullName>
                    <label>IN-Inland/Intermodal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SoldToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold-to partner related</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Sold-to</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Sales Areas (Sold-to partner related)</relationshipLabel>
        <relationshipName>Account_SalesArea_PartnerFunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_UnderdelivTolrtdLmtRatioInPct__c</fullName>
        <label>Underdelivery Tolerance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Account Sales Area</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Sales Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>